--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
             <version>4.1.2</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
