access_key is defined in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 #server.port = 8090
+access_key = "9f7ff6d180e8ea81483c03dc0209215b"
